--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -8,7 +8,6 @@
     border: 1px solid white;
     border-radius: 16px;
     background-color: white;
-    max-height: 320;
 }
 a.tab-title{
     color: rgb(0,0,0, 0.4);
